--- a/src/card/style.css
+++ b/src/card/style.css
@@ -5,7 +5,7 @@
 	margin: 10px;
 	padding: 0;
 	border: 0;
-
+	transition: ease-in-out opacity 0.2s;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
