--- a/src/card/style.css
+++ b/src/card/style.css
@@ -1,8 +1,8 @@
 .card {
 	width: 100%;
-	max-width: 31%;
-	height: 250px;
-	margin: 10px;
+	max-width: 25%;
+    height: 10rem;
+    margin: 0.8rem;
 	padding: 0;
 	border: 0;
 	transition: ease-in-out opacity 0.8s;
