Improve iamge rendering look

--- a/src/card/style.css
+++ b/src/card/style.css
@@ -9,6 +9,7 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	background-color: #282c34;
 }
 
 .card--faded {
