--- a/src/GameCard/style.css
+++ b/src/GameCard/style.css
@@ -1,8 +1,8 @@
 .card {
 	width: 100%;
 	max-width: 25%;
-    height: 10rem;
-    margin: 0.8rem;
+	height: 10rem;
+	margin: 0.8rem;
 	padding: 0;
 	border: 0;
 	transition: ease-in-out opacity 0.8s;
@@ -12,6 +12,10 @@
 	background-color: #282c34;
 }
 
-.card--faded {
-	border: 20px solid red;
+.card:hover {
+	cursor: pointer;
+}
+
+.card--hidden {
+	display: none;
 }
