--- a/src/GameCard/style.css
+++ b/src/GameCard/style.css
@@ -1,15 +1,13 @@
+
+
 .card {
 	width: 100%;
 	max-width: 25%;
-	height: 10rem;
+	height: 14rem;
 	margin: 0.8rem;
 	padding: 0;
 	border: 0;
-	transition: width 2s, height 4s;
-	transition-timing-function: ease-in-out;
 	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
 	background-color: #282c34;
 }
 
@@ -20,3 +18,22 @@
 .card--hidden {
 	display: none;
 }
+
+@media (max-width: 700px) {
+  .card, .skeleton {
+		height: 10rem;
+	}
+}
+
+@media (max-width: 550px) {
+  .card, .skeleton {
+		height: 8rem;
+	}
+}
+
+@media (max-width: 400px) {
+  .card, .skeleton {
+		height: 6rem;
+	}
+}
+
